Moved hello world code into its own package, fixed service injection.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Briar</string>
-    <string name="title">Add a Contact</string>
-    <string name="welcome">Welcome to Briar! Add a contact to get started.</string>
-    <string name="add_contact_button">Add a contact</string>
-    <string name="face_to_face">For security reasons you must be face to face with someone to add them as a contact.</string>
-    <string name="same_network">Briar can add contacts via Wi-Fi or Bluetooth. To use Wi-Fi you must both be connected to the same network.</string>
-    <string name="wifi_not_available">Wi-Fi is not available on this device</string>
-    <string name="wifi_disabled">Wi-Fi is OFF</string>
-    <string name="wifi_disconnected">Wi-Fi is DISCONNECTED</string>
-    <string name="wifi_connected">Wi-Fi is CONNECTED to %1$s</string>
-    <string name="bluetooth_not_available">Bluetooth is not available on this device</string>
-    <string name="bluetooth_disabled">Bluetooth is OFF</string>
-    <string name="bluetooth_not_discoverable">Bluetooth is NOT DISCOVERABLE</string>
-    <string name="bluetooth_enabled">Bluetooth is ON</string>
-    <string name="continue_button">Continue</string>
-    <string name="your_invitation_code">Your invitation code is</string>
-    <string name="enter_invitation_code">Please enter your contact\'s invitation code:</string>
-    <string name="connecting_wifi">Connecting via %1$s\u2026</string>
-    <string name="connecting_bluetooth">Connecting via Bluetooth\u2026</string>
-    <string name="connection_failed">Connection failed</string>
-    <string name="check_same_network">Please check that you are both using the same network.</string>
-    <string name="try_again_button">Try again</string>
-    <string name="connected_to_contact">Connected to contact</string>
-    <string name="your_confirmation_code">Your confirmation code is</string>
-    <string name="enter_confirmation_code">Please enter your contact\'s confirmation code:</string>
-    <string name="waiting_for_contact">Waiting for contact\u2026</string>
-    <string name="codes_do_not_match">Codes do not match</string>
-    <string name="interfering">This could mean that someone is trying to interfere with your connection.</string>
-    <string name="contact_added">Contact added</string>
-    <string name="enter_nickname">Please enter a nickname for this contact:</string>
-    <string name="add_another_contact_button">Add another contact</string>
-    <string name="done_button">Done</string>
+	<string name="app_name">Briar</string>
+	<string name="welcome">Welcome to Briar! Add a contact to get started.</string>
+	<string name="face_to_face">For security reasons you must be face to face with someone to add them as a contact.</string>
+	<string name="add_contact_button">Add a contact</string>
+	<string name="add_a_contact">Add a Contact</string>
+	<string name="same_network">Briar can add contacts via Wi-Fi or Bluetooth. To use Wi-Fi you must both be connected to the same network.</string>
+	<string name="wifi_not_available">Wi-Fi is not available on this device</string>
+	<string name="wifi_disabled">Wi-Fi is OFF</string>
+	<string name="wifi_disconnected">Wi-Fi is DISCONNECTED</string>
+	<string name="wifi_connected">Wi-Fi is CONNECTED to %1$s</string>
+	<string name="bluetooth_not_available">Bluetooth is not available on this device</string>
+	<string name="bluetooth_disabled">Bluetooth is OFF</string>
+	<string name="bluetooth_not_discoverable">Bluetooth is NOT DISCOVERABLE</string>
+	<string name="bluetooth_enabled">Bluetooth is ON</string>
+	<string name="continue_button">Continue</string>
+	<string name="your_invitation_code">Your invitation code is</string>
+	<string name="enter_invitation_code">Please enter your contact\'s invitation code:</string>
+	<string name="connecting_wifi">Connecting via %1$s\u2026</string>
+	<string name="connecting_bluetooth">Connecting via Bluetooth\u2026</string>
+	<string name="connection_failed">Connection failed</string>
+	<string name="check_same_network">Please check that you are both using the same network.</string>
+	<string name="try_again_button">Try again</string>
+	<string name="connected_to_contact">Connected to contact</string>
+	<string name="your_confirmation_code">Your confirmation code is</string>
+	<string name="enter_confirmation_code">Please enter your contact\'s confirmation code:</string>
+	<string name="waiting_for_contact">Waiting for contact\u2026</string>
+	<string name="codes_do_not_match">Codes do not match</string>
+	<string name="interfering">This could mean that someone is trying to interfere with your connection.</string>
+	<string name="contact_added">Contact added</string>
+	<string name="enter_nickname">Please enter a nickname for this contact:</string>
+	<string name="add_another_contact_button">Add another contact</string>
+	<string name="done_button">Done</string>
 </resources>
