--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -11,8 +11,9 @@
 	<string name="quit_button">Quit</string>
 	<string name="contact_list_title">Contacts</string>
 	<string name="contact_connected">Connected</string>
-	<string name="contact_last_connected">Last connected &lt;br /&gt; %s</string>
+	<string name="contact_last_connected">Last connected &lt;br /&gt; %1$s</string>
 	<string name="add_contact_button">New Contact</string>
+	<string name="search_button">Search</string>
 	<string name="add_contact_title">Add a Contact</string>
 	<string name="same_network">Briar can add contacts via Wi-Fi or Bluetooth. For security reasons, you must be face-to-face to add someone as a contact. To use Wi-Fi you must both be connected to the same network.</string>
 	<string name="wifi_not_available">Wi-Fi is not available on this device</string>
@@ -39,7 +40,7 @@
 	<string name="interfering">This could mean that someone is trying to interfere with your connection.</string>
 	<string name="contact_added">Contact added</string>
 	<string name="enter_nickname">Please enter a nickname for this contact:</string>
+	<string name="done_button">Done</string>
 	<string name="messages_title">Messages</string>
 	<string name="compose_button">New Message</string>
-	<string name="done_button">Done</string>
 </resources>
