--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -14,7 +14,7 @@
 	<string name="contact_last_connected">Last connected &lt;br /&gt; %1$s</string>
 	<string name="search_button">Search</string>
 	<string name="add_contact_title">Add a Contact</string>
-	<string name="same_network">Briar can add contacts via Wi-Fi or Bluetooth. For security reasons, you must be face-to-face to add someone as a contact. To use Wi-Fi you must both be connected to the same network.</string>
+	<string name="same_network">Briar can add contacts via Wi-Fi or Bluetooth.  To use Wi-Fi you must both be connected to the same network.</string>
 	<string name="wifi_not_available">Wi-Fi is not available on this device</string>
 	<string name="wifi_disabled">Wi-Fi is OFF</string>
 	<string name="wifi_disconnected">Wi-Fi is DISCONNECTED</string>
