--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -11,14 +11,13 @@
 	<string name="quit_button">Quit</string>
 	<string name="contact_list_title">Contacts</string>
 	<string name="contact_connected">Connected</string>
-	<string name="contact_last_connected">Last connected &lt;br /&gt; %1$s</string>
-	<string name="search_button">Search</string>
+	<string name="format_contact_last_connected">Last connected &lt;br /&gt; %1$s</string>
 	<string name="add_contact_title">Add a Contact</string>
 	<string name="same_network">Briar can add contacts via Wi-Fi or Bluetooth.  To use Wi-Fi you must both be connected to the same network.</string>
 	<string name="wifi_not_available">Wi-Fi is not available on this device</string>
 	<string name="wifi_disabled">Wi-Fi is OFF</string>
 	<string name="wifi_disconnected">Wi-Fi is DISCONNECTED</string>
-	<string name="wifi_connected">Wi-Fi is CONNECTED to %1$s</string>
+	<string name="format_wifi_connected">Wi-Fi is CONNECTED to %1$s</string>
 	<string name="bluetooth_not_available">Bluetooth is not available on this device</string>
 	<string name="bluetooth_disabled">Bluetooth is OFF</string>
 	<string name="bluetooth_not_discoverable">Bluetooth is NOT DISCOVERABLE</string>
@@ -26,7 +25,7 @@
 	<string name="continue_button">Continue</string>
 	<string name="your_invitation_code">Your invitation code is</string>
 	<string name="enter_invitation_code">Please enter your contact\'s invitation code:</string>
-	<string name="connecting_wifi">Connecting via %1$s\u2026</string>
+	<string name="format_connecting_wifi">Connecting via %1$s\u2026</string>
 	<string name="connecting_bluetooth">Connecting via Bluetooth\u2026</string>
 	<string name="connection_failed">Connection failed</string>
 	<string name="check_same_network">Please check that you are both using the same network.</string>
@@ -41,7 +40,11 @@
 	<string name="enter_nickname">Please enter a nickname for this contact:</string>
 	<string name="done_button">Done</string>
 	<string name="messages_title">Messages</string>
-	<string name="message_from">From: %1$s</string>
-	<string name="compose_title">New Message</string>
-	<string name="message_to">To:</string>
+	<string name="format_from">From: %1$s</string>
+	<string name="format_to">To: %1$s</string>
+	<string name="compose_message_title">New Message</string>
+	<string name="to">To:</string>
+	<string name="groups_title">Groups</string>
+	<string name="anonymous">(Anonymous)</string>
+	<string name="compose_group_title">New Post</string>
 </resources>
