Added spinners for selecting which identity to use.
(Although it isn't possible to create an identity yet...)

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -13,15 +13,15 @@
 	<string name="contact_connected">Connected</string>
 	<string name="format_contact_last_connected">Last connected &lt;br /&gt; %1$s</string>
 	<string name="add_contact_title">Add a Contact</string>
-	<string name="choose_identity">Choose an identity to use with this contact:</string>
-	<string name="wifi_not_available">Wi-Fi is not available on this device</string>
+	<string name="your_identity">Your identity: </string>
+	<string name="wifi_not_available">Wi-Fi is NOT AVAILABLE</string>
 	<string name="wifi_disabled">Wi-Fi is OFF</string>
 	<string name="wifi_disconnected">Wi-Fi is DISCONNECTED</string>
-	<string name="format_wifi_connected">Wi-Fi is CONNECTED to %1$s</string>
-	<string name="bluetooth_not_available">Bluetooth is not available on this device</string>
+	<string name="format_wifi_connected">Wi-Fi is connected to %1$s</string>
+	<string name="bluetooth_not_available">Bluetooth is NOT AVAILABLE</string>
 	<string name="bluetooth_disabled">Bluetooth is OFF</string>
 	<string name="bluetooth_not_discoverable">Bluetooth is NOT DISCOVERABLE</string>
-	<string name="bluetooth_enabled">Bluetooth is DISCOVERABLE</string>
+	<string name="bluetooth_enabled">Bluetooth is discoverable</string>
 	<string name="continue_button">Continue</string>
 	<string name="your_invitation_code">Your invitation code is</string>
 	<string name="enter_invitation_code">Please enter your contact\'s invitation code:</string>
@@ -43,7 +43,8 @@
 	<string name="format_from">From: %1$s</string>
 	<string name="format_to">To: %1$s</string>
 	<string name="compose_message_title">New Message</string>
-	<string name="to">To:</string>
+	<string name="from">From: </string>
+	<string name="to">To: </string>
 	<string name="anonymous">(Anonymous)</string>
 	<string name="groups_title">Groups</string>
 	<string name="compose_group_title">New Post</string>
