--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -43,17 +43,20 @@
 	<string name="format_from">From: %1$s</string>
 	<string name="format_to">To: %1$s</string>
 	<string name="compose_message_title">New Message</string>
-	<string name="from">From: </string>
-	<string name="to">To: </string>
+	<string name="from">From:</string>
+	<string name="to">To:</string>
 	<string name="anonymous">(Anonymous)</string>
 	<string name="groups_title">Groups</string>
 	<string name="create_group_title">New Group</string>
 	<string name="choose_group_name">Choose a name for your group:</string>
 	<string name="compose_group_title">New Post</string>
 	<string name="blogs_title">Blogs</string>
+	<string name="create_blog_title">New Blog</string>
+	<string name="choose_blog_name">Choose a name for your blog:</string>
+	<string name="compose_blog_title">New Post</string>
 	<string name="create_nickname_item">New nickname\u2026</string>
 	<string name="create_identity_title">Create an Identity</string>
-	<string name="choose_nickname">Choose your nickname: </string>
+	<string name="choose_nickname">Choose your nickname:</string>
 	<string name="create_button">Create</string>
 	<string name="no_contacts">You don\'t have any contacts. Add a contact now?</string>
 	<string name="add_button">Add</string>
