Display conversations and groups even if they're empty.

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -40,6 +40,7 @@
 	<string name="contact_added">Contact added</string>
 	<string name="done_button">Done</string>
 	<string name="messages_title">Messages</string>
+	<string name="no_messages">(No messages)</string>
 	<string name="format_from">From: %1$s</string>
 	<string name="format_to">To: %1$s</string>
 	<string name="compose_message_title">New Message</string>
@@ -47,6 +48,7 @@
 	<string name="to">To:</string>
 	<string name="anonymous">(Anonymous)</string>
 	<string name="groups_title">Groups</string>
+	<string name="no_posts">(No posts)</string>
 	<string name="create_group_title">New Group</string>
 	<string name="choose_group_name">Choose a name for your group:</string>
 	<string name="compose_group_title">New Post</string>
