--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -51,10 +51,14 @@
 	<string name="no_posts">(No posts)</string>
 	<string name="create_group_title">New Group</string>
 	<string name="choose_group_name">Choose a name for your group:</string>
+	<string name="group_visible_to_all">Share this group with all contacts</string>
+	<string name="group_visible_to_some">Share this group with chosen contacts</string>
 	<string name="compose_group_title">New Post</string>
 	<string name="blogs_title">Blogs</string>
 	<string name="create_blog_title">New Blog</string>
 	<string name="choose_blog_name">Choose a name for your blog:</string>
+	<string name="blog_visible_to_all">Share this blog with all contacts</string>
+	<string name="blog_visible_to_some">Share this blog with chosen contacts</string>
 	<string name="compose_blog_title">New Post</string>
 	<string name="create_nickname_item">New nickname\u2026</string>
 	<string name="create_identity_title">Create an Identity</string>
