--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -47,6 +47,7 @@
 	<string name="from">From:</string>
 	<string name="to">To:</string>
 	<string name="anonymous">(Anonymous)</string>
+	<string name="new_contact_item">New contact\u2026</string>
 	<string name="groups_title">Groups</string>
 	<string name="no_posts">(No posts)</string>
 	<string name="create_group_title">New Group</string>
