UI for setting and entering the password that encrypts the database key.

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -3,6 +3,13 @@
 	<string name="app_name">Briar</string>
 	<string name="notification_title">Briar is running</string>
 	<string name="notification_text">Touch to quit.</string>
+	<string name="setup_title">Briar Setup</string>
+	<string name="choose_nickname">Choose your nickname:</string>
+	<string name="choose_password">Choose your password:</string>
+	<string name="confirm_password">Confirm your password:</string>
+	<string name="format_min_password">Password must be at least %1$d characters long.</string>
+	<string name="enter_password">Enter your password:</string>
+	<string name="try_again">Wrong password, try again</string>
 	<string name="contact_list_button">Contacts</string>
 	<string name="messages_button">Messages</string>
 	<string name="groups_button">Groups</string>
@@ -29,14 +36,14 @@
 	<string name="format_connecting_wifi">Connecting via %1$s\u2026</string>
 	<string name="connecting_bluetooth">Connecting via Bluetooth\u2026</string>
 	<string name="connection_failed">Connection failed</string>
-	<string name="check_same_network">Please check that you are both using the same network.</string>
+	<string name="check_same_network">Please check that you are both using the same network</string>
 	<string name="try_again_button">Try again</string>
 	<string name="connected_to_contact">Connected to contact</string>
 	<string name="your_confirmation_code">Your confirmation code is</string>
 	<string name="enter_confirmation_code">Please enter your contact\'s confirmation code:</string>
 	<string name="waiting_for_contact">Waiting for contact\u2026</string>
 	<string name="codes_do_not_match">Codes do not match</string>
-	<string name="interfering">This could mean that someone is trying to interfere with your connection.</string>
+	<string name="interfering">This could mean that someone is trying to interfere with your connection</string>
 	<string name="contact_added">Contact added</string>
 	<string name="done_button">Done</string>
 	<string name="messages_title">Messages</string>
@@ -67,7 +74,6 @@
 	<string name="new_blog_item">New blog\u2026</string>
 	<string name="create_nickname_item">New nickname\u2026</string>
 	<string name="create_identity_title">Create an Identity</string>
-	<string name="choose_nickname">Choose your nickname:</string>
 	<string name="create_button">Create</string>
 	<string name="no_contacts">You don\'t have any contacts. Add a contact now?</string>
 	<string name="add_button">Add</string>
