--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -10,6 +10,7 @@
 	<string name="format_min_password">Password must be at least %1$d characters long.</string>
 	<string name="enter_password">Enter your password:</string>
 	<string name="try_again">Wrong password, try again</string>
+	<string name="expiry_warning">This software has expired.\nPlease install a newer version.</string>
 	<string name="contact_list_button">Contacts</string>
 	<string name="messages_button">Messages</string>
 	<string name="groups_button">Groups</string>
