--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -9,7 +9,7 @@
 	<string name="confirm_password">Confirm your password:</string>
 	<string name="format_min_password">Password must be at least %1$d characters long.</string>
 	<string name="enter_password">Enter your password:</string>
-	<string name="try_again">Wrong password, try again</string>
+	<string name="try_again">Wrong password, try again:</string>
 	<string name="expiry_warning">This software has expired.\nPlease install a newer version.</string>
 	<string name="contact_list_button">Contacts</string>
 	<string name="messages_button">Messages</string>
@@ -50,28 +50,40 @@
 	<string name="messages_title">Messages</string>
 	<string name="no_messages">(No messages)</string>
 	<string name="format_from">From: %1$s</string>
-	<string name="format_to">To: %1$s</string>
-	<string name="compose_message_title">New Message</string>
+	<string name="new_message_title">New Message</string>
 	<string name="from">From:</string>
 	<string name="to">To:</string>
 	<string name="anonymous">Anonymous</string>
 	<string name="new_contact_item">New contact\u2026</string>
 	<string name="groups_title">Groups</string>
-	<string name="no_posts">(No posts)</string>
+	<plurals name="groups_available">
+	    <item quantity="one">%1$d group available from contacts</item>
+	    <item quantity="two">$1$d groups available from contacts</item>
+	</plurals>
+	<string name="no_posts">No posts</string>
+	<string name="subscribe_to_this_group">Subscribe to this group</string>
 	<string name="create_group_title">New Group</string>
 	<string name="choose_group_name">Choose a name for your group:</string>
 	<string name="group_visible_to_all">Share this group with all contacts</string>
 	<string name="group_visible_to_some">Share this group with chosen contacts</string>
-	<string name="compose_group_title">New Post</string>
+	<string name="new_post_title">New Post</string>
 	<string name="new_group_item">New group\u2026</string>
 	<string name="blogs_title">Blogs</string>
+	<plurals name="blogs_available">
+	    <item quantity="one">%1$d blog available from contacts</item>
+	    <item quantity="two">$1$d blogs available from contacts</item>
+	</plurals>
+	<string name="manage_subscriptions_title">Manage Subscriptions</string>
+	<string name="subscribed_all">Subscribed, shared with all contacts</string>
+	<string name="subscribed_some">Subscribed, shared with chosen contacts</string>
+	<string name="not_subscribed">Not subscribed</string>
+	<string name="subscribe_to_this_blog">Subscribe to this blog</string>
 	<string name="create_blog_title">New Blog</string>
 	<string name="choose_blog_name">Choose a name for your blog:</string>
 	<string name="blog_visible_to_all">Share this blog with all contacts</string>
 	<string name="blog_visible_to_some">Share this blog with chosen contacts</string>
 	<string name="not_your_blog">Only the creator of this blog can write posts</string>
 	<string name="ok_button">OK</string>
-	<string name="compose_blog_title">New Post</string>
 	<string name="new_blog_item">New blog\u2026</string>
 	<string name="create_nickname_item">New nickname\u2026</string>
 	<string name="create_identity_title">Create an Identity</string>
