--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -19,6 +19,7 @@
 	<string name="quit_button">Quit</string>
 	<string name="new_identity_item">New identity\u2026</string>
 	<string name="contact_list_title">Contacts</string>
+	<string name="share_app">Share the Briar App</string>
 	<string name="contact_connected">Connected</string>
 	<string name="format_last_connected">Last connected &lt;br /&gt; %1$s</string>
 	<string name="add_contact_title">Add a Contact</string>
