Changed 'groups' to 'forums' in the Android UI.

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -13,7 +13,7 @@
 	<string name="expiry_warning">This software has expired.\nPlease install a newer version.</string>
 	<string name="contact_list_button">Contacts</string>
 	<string name="messages_button">Messages</string>
-	<string name="groups_button">Groups</string>
+	<string name="forums_button">Forums</string>
 	<string name="synchronize_button">Synchronize</string>
 	<string name="quit_button">Quit</string>
 	<string name="new_identity_item">New identity\u2026</string>
@@ -58,29 +58,29 @@
 	<string name="to">To:</string>
 	<string name="anonymous">Anonymous</string>
 	<string name="new_contact_item">New contact\u2026</string>
-	<string name="groups_title">Groups</string>
-	<plurals name="groups_available">
-	    <item quantity="one">%1$d group available from contacts</item>
-	    <item quantity="other">%1$d groups available from contacts</item>
+	<string name="forums_title">Forums</string>
+	<plurals name="forums_available">
+	    <item quantity="one">%1$d forum available from contacts</item>
+	    <item quantity="other">%1$d forums available from contacts</item>
 	</plurals>
 	<string name="no_posts">No posts</string>
-	<string name="subscribe_to_this_group">Subscribe to this group</string>
-	<string name="create_group_title">New Group</string>
-	<string name="choose_group_name">Choose a name for your group:</string>
-	<string name="group_visible_to_all">Share this group with all contacts</string>
-	<string name="group_visible_to_some">Share this group with chosen contacts</string>
+	<string name="subscribe_to_this_forum">Subscribe to this forum</string>
+	<string name="create_forum_title">New Forum</string>
+	<string name="choose_forum_name">Choose a name for your forum:</string>
+	<string name="forum_visible_to_all">Share this forum with all contacts</string>
+	<string name="forum_visible_to_some">Share this forum with chosen contacts</string>
 	<string name="new_post_title">New Post</string>
-	<string name="new_group_item">New group\u2026</string>
+	<string name="new_forum_item">New forum\u2026</string>
 	<string name="manage_subscriptions_title">Manage Subscriptions</string>
-	<string name="no_groups_available">No groups available from contacts</string>
+	<string name="no_forums_available">No forums available from contacts</string>
 	<string name="subscribed_all">Subscribed, shared with all contacts</string>
 	<string name="subscribed_some">Subscribed, shared with chosen contacts</string>
 	<string name="not_subscribed">Not subscribed</string>
 	<string name="create_nickname_item">New nickname\u2026</string>
-	<string name="create_identity_title">Create an Identity</string>
+	<string name="new_identity_title">New Identity</string>
 	<string name="create_button">Create</string>
 	<string name="no_contacts">You don\'t have any contacts. Add a contact now?</string>
 	<string name="add_button">Add</string>
 	<string name="cancel_button">Cancel</string>
-	<string name="no_groups">You aren\'t subscribed to any groups. Create a group now?</string>
+	<string name="no_forums">You aren\'t subscribed to any forums. Create a forum now?</string>
 </resources>
