Replaced private messages with private groups.
Private messages are now the same as group messages, but groups can be
private or public. When a contact is added, a private group is created
and designated as the inbox for exchanging private messages with the
contact.

--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -52,6 +52,7 @@
 	<string name="messages_title">Messages</string>
 	<string name="no_messages">(No messages)</string>
 	<string name="format_from">From: %1$s</string>
+	<string name="format_to">To: %1$s</string>
 	<string name="new_message_title">New Message</string>
 	<string name="from">From:</string>
 	<string name="to">To:</string>
