--- a/briar-android/res/values/strings.xml
+++ b/briar-android/res/values/strings.xml
@@ -17,7 +17,6 @@
 	<string name="quit_button">Quit</string>
 	<string name="new_identity_item">New identity\u2026</string>
 	<string name="contact_list_title">Contacts</string>
-	<string name="share_app">Share the Briar App</string>
 	<string name="contact_connected">Connected</string>
 	<string name="format_last_connected">Last connected &lt;br /&gt; %1$s</string>
 	<string name="add_contact_title">Add a Contact</string>
@@ -71,16 +70,15 @@
 	<string name="forum_visible_to_some">Share this forum with chosen contacts</string>
 	<string name="new_post_title">New Post</string>
 	<string name="new_forum_item">New forum\u2026</string>
-	<string name="manage_subscriptions_title">Manage Subscriptions</string>
+	<string name="manage_subscriptions_title">Available Forums</string>
 	<string name="no_forums_available">No forums available from contacts</string>
 	<string name="subscribed_all">Subscribed, shared with all contacts</string>
 	<string name="subscribed_some">Subscribed, shared with chosen contacts</string>
 	<string name="not_subscribed">Not subscribed</string>
 	<string name="create_nickname_item">New nickname\u2026</string>
-	<string name="new_identity_title">New Identity</string>
+	<string name="new_identity_title">New Nickname</string>
 	<string name="create_button">Create</string>
 	<string name="no_contacts">You don\'t have any contacts. Add a contact now?</string>
 	<string name="add_button">Add</string>
 	<string name="cancel_button">Cancel</string>
-	<string name="no_forums">You aren\'t subscribed to any forums. Create a forum now?</string>
 </resources>
